--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -1,24 +1,13 @@
 {
-  "name": "Vue.js devtools",
-  "version": "3.0.8",
-  "description": "Chrome devtools extension for debugging Vue.js applications.",
+  "name": "vdom devtools",
+  "version": "0.1.0",
+  "description": "Chrome devtools extension for debugging vdom applications.",
   "manifest_version": 2,
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
     "128": "icons/128.png"
   },
-
-  "browser_action": {
-    "default_icon": {
-      "16": "icons/16-gray.png",
-      "48": "icons/48-gray.png",
-      "128": "icons/128-gray.png"
-    },
-    "default_title": "Vue Devtools",
-    "default_popup": "popups/not-found.html"
-  },
-
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "web_accessible_resources": [ "devtools.html", "devtools-background.html", "build/backend.js" ],
 
